<resources>
    <string name="app_name">Warframe Farm</string>
    <string name="title_primes">Primes</string>
    <string name="title_components">Components</string>
    <string name="title_relics">Relics</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_planets">Planets</string>
    <string name="title_missions">Missions</string>
    <string name="title_bounties">Bounties</string>
    <string name="title_caches">Caches</string>
    <string name="title_points_of_interest">Point of Interest</string>
    <string name="title_abandoned_derelict">Abandoned Derelict</string>
    <string name="parts_label">Parts:</string>
    <string name="relics_label">Relics:</string>
    <string name="rewards_label">Rewards:</string>
    <string name="missions_label">Missions:</string>
    <string name="drop_locations_label">Drop Locations:</string>
    <string name="best_drop_locations_label">Best Drop Locations:</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="forma">Forma</string>
    <string name="relic_name">%1$s %2$s Relic</string>
    <string name="load_more">Load More</string>
    <string name="search">Search</string>
    <string name="planet">Planet</string>
    <string name="mission_type">Mission Type</string>
    <string name="drop_chance">Drop Chance</string>
    <string name="best_places">Best Places</string>
    <string name="component">Component</string>
    <string name="relic">Relic</string>
    <string name="type">Type</string>
    <string name="era">Era</string>
    <string name="level">Level</string>
    <string name="name">Name</string>
    <string name="vaulted">Vaulted</string>
    <string name="needed">Needed</string>
    <string name="checking_updates">Checking for updates…</string>
    <string name="updating_user">Updating user data…</string>
    <string name="profile">Profile</string>
    <string name="menu">Main Menu</string>
    <string name="list">Lists</string>
    <string name="components">Components</string>
    <string name="farm">Farm</string>
    <string name="settings">Settings</string>
    <string name="select_all">Select All</string>
    <string name="check_selected">Check Selected Primes (%d)</string>
    <string name="uncheck_selected">Uncheck Selected Primes (%d)</string>
    <string name="title_loading">Loading</string>
    <string name="text_loading_relics">Loading relics</string>
    <string name="owned">%d Owned</string>
    <string name="is_owned">Owned</string>
    <string name="not_owned">Not Owned</string>
    <string name="empty_state_relics">No relic matching this search.</string>
    <string name="empty_state_missions">No mission matching this search.</string>
    <string name="add_all_needed">Add All Needed</string>
    <string name="delete_selection">Delete Selection</string>
    <string name="add_item">Add Item</string>
    <string name="clear">Clear</string>
    <string name="vaulted_label">Vaulted</string>
    <string name="best_missions_label">Best Missions</string>
    <string name="title_add_item_menu">Add Items</string>
    <string name="button_add_prime">Add Primes</string>
    <string name="button_add_component">Add Components</string>
    <string name="title_add_prime">Add Primes</string>
    <string name="title_add_components">Add Components</string>
    <string name="empty_state_items">Click on the + button to add primes or prime parts</string>
    <string name="empty_state_results_relic">Add primes or prime parts to see the relics they\'re in</string>
    <string name="empty_state_results_missions">Add primes or prime parts to see the missions you need to do to get the right relics</string>
    <string name="empty_state_results_vaulted">The primes or prime parts added are all vaulted</string>
    <string name="empty_state_component">No result for this search, try changing the filter or search for something else.</string>
    <string name="category_performance">Performance</string>
    <string name="label_load_no_limit">Unlimited number of results in lists</string>
    <string name="label_load_limit_1">Limit lists to load</string>
    <string name="label_load_limit_2">items.</string>
    <string name="category_account">Account</string>
    <string name="label_sync_local">Save data to the cloud</string>
    <string name="label_sync_online">Get data from the cloud</string>
    <string name="update_db">Update Database</string>
    <string name="title_updating_db">Updating Database</string>
    <string name="text_updating_db">Please wait while the database is being updated</string>
    <string name="title_rotation">Rotation %1$s</string>
    <string name="title_first_cache">First cache</string>
    <string name="title_second_cache">Second cache</string>
    <string name="title_third_cache">Third cache</string>
    <string name="label_drop_chance">Drop Chance:</string>
    <string name="dialog_confirm_title">Confirm changes?</string>
    <string name="dialog_cancel_changes">Cancel Changes</string>
    <string name="modify">Modify</string>
    <string name="title_updating_email">Updating Email</string>
    <string name="text_updating_email">Please wait while your e-mail address is being updated</string>
    <string name="email_updated">E-mail successfully updated</string>
    <string name="error_same_email">The new e-mail address needs to be different</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="title_delete_account">Delete account ?</string>
    <string name="text_delete_account">Are you sure you want to delete your account ? \nEnter your password :</string>
    <string name="delete">Delete</string>
    <string name="title_reauthentication">Checking password</string>
    <string name="text_reauthentication">Please wait while we check your password</string>
    <string name="invalid_password">Enter a valid password</string>
    <string name="title_deleting_account">Deleting account</string>
    <string name="text_deleting_account">Please wait while your account is being deleted</string>
    <string name="account_deleted">Account successfully deleted</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_sign_in">Sign In</string>
    <string name="label_email">E-mail address</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="create_account"><u>New here? Create an account right now to save your data !</u></string>
    <string name="already_signed_up"><u>Already signed up? Connect to your account right now !</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="disruption_mission">Disruption</string>
    <string name="disruption_description">Disruption is an endless mission type tasking the Tenno with recovering items from conduits, asset security systems which Alad V has marketed and sold across the system. Similar to Mobile Defense, the squad must fight high-ranking enemies to loot a conduit key and activate a terminal, then defend it from a Demo unit that tries to destroy that terminal.</string>
    <string name="disruption_rotations">Mission rewards are based on the number of conduits successfully defended and the round. It goes as follow :</string>
    <string name="disruption_efficiency">You can make your runs more efficient by using this\n- A :\n -> 1 conduit on each round\n -> extract at the end of the 3rd round\n - B :\n -> round 1 : 4 conduits\n -> round 2 : 3 conduits\n -> round 3 : 2 conduits\n -> round 4+ : 1 conduit\n - C :\n -> round 1 : /\n -> round 2 : /\n -> round 3 : 4 conduits\n -> round 4+ : 3 conduits</string>
    <string name="conduit">CONDUIT</string>
    <string name="round">R\nO\nU\nN\nD</string>
    <string name="defense_mission">Defense</string>
    <string name="defense_description">Defense is an endless mission type in which the players must defend the assigned primary objective or objectives from being destroyed by attacking waves of enemies. The wave will be considered cleared when all the enemies in the wave have been killed.</string>
    <string name="defense_rotations">Mission rewards change every 5 waves and follows a repeating rotation A-A-B-C pattern.</string>
    <string name="survival_mission">Survival</string>
    <string name="survival_description">Survival is an endless mission type where players will have to fight an endless, steady stream of enemies to survive for as long as possible while slowly losing life support, distracting enemies as a Tenno operative secretly gathers supplies behind the scenes.</string>
    <string name="survival_rotations">Mission rewards change every 5 minutes and follows a repeating rotation A-A-B-C pattern.</string>
    <string name="spy_mission">Spy</string>
    <string name="spy_description">Spy is a mission type where players are tasked with extracting confidential data from enemy data servers (Data Vaults).</string>
    <string name="spy_rotations">Mission rewards are based on the number of Data Vaults hacked :\n- 1/3 Data Vaults : A\n- 2/3 Data Vaults : B\n- 3/3 Data Vaults : C</string>
    <string name="exterminate_mission">Exterminate</string>
    <string name="exterminate_description">Exterminate missions require players to kill a limited number of enemies in the area and then make it to extraction. A counter will be displayed below the minimap showing the number of enemies remaining.</string>
    <string name="capture_mission">Capture</string>
    <string name="capture_description">Capture is a mission type requiring the player to find a person of interest, incapacitate them before they escape, and capture said target before heading to extraction.</string>
    <string name="mobile_defense_mission">Mobile Defense</string>
    <string name="mobile_defense_description">Mobile Defense is a mission type requiring players to carry a data-mass to 2-3 computer terminals and upload it to them. Once uploaded at each terminal, players will have to defend the terminal until hacking is completed. The mission will fail if a single terminal is destroyed.</string>
    <string name="interception_mission">Interception</string>
    <string name="interception_description">Interception is an endless mission type requiring players to capture and hold set locations on the map in order to intercept enemy transmissions by reaching 100% control sooner than the enemy faction does.</string>
    <string name="interception_rotations">Mission rewards change every round and follows a repeating rotation A-A-B-C pattern.</string>
    <string name="assault_mission">Assault</string>
    <string name="assault_description">Assault is a mission type identical to Sabotage, requiring Tenno to breach into the Kuva Fortress and destroy its navar cannon.</string>
    <string name="sabotage_mission">Sabotage</string>
    <string name="sabotage_description">Sabotage is a mission type requiring players to reach an objective, and then destroy it before heading to extraction. The objective that needs to be destroyed differs depending on the mission\'s tileset.</string>
    <string name="rescue_mission">Rescue</string>
    <string name="rescue_description">Rescue is a mission type requiring the player to locate a hostage and escort them to extraction without alerting the base\'s security.</string>
    <string name="assassination_mission">Assassination</string>
    <string name="assassination_description">Assassination is a mission type that tasks the Tenno to seek and eliminate a unique enemy boss and then return to extraction.</string>
    <string name="rush_mission">Rush</string>
</resources>