<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_primes"
        android:icon="@drawable/prime_warframe"
        android:title="@string/title_primes" />

    <item
        android:id="@+id/navigation_components"
        android:icon="@drawable/prime_part"
        android:title="@string/components" />

    <item
        android:id="@+id/navigation_relics"
        android:icon="@drawable/relic"
        android:title="@string/title_relics" />

    <item
        android:id="@+id/navigation_planets"
        android:icon="@drawable/planet"
        android:title="@string/title_planets" />

    <item
        android:id="@+id/navigation_farm"
        android:icon="@drawable/prime_part"
        android:title="@string/farm" />

</menu>