<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame"
        android:orientation="vertical"
        android:padding="1dp">

        <TextView
            android:id="@+id/textSignUpTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/textBackground"
            android:elevation="5dp"
            android:padding="10dp"
            android:text="@string/title_sign_up"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorBackgroundDark"
            android:textColorHighlight="@color/colorAccent"
            android:textColorHint="@color/colorBackgroundLight"
            android:textColorLink="@color/colorAccent" />

        <TextView
            android:id="@+id/textPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorBackgroundDark"
            android:textColorHighlight="@color/colorAccent"
            android:textColorLink="@color/colorAccent" />

        <TextView
            android:id="@+id/textPasswordConfirmLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/label_confirm_password" />

        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/colorBackgroundDark"
            android:textColorHighlight="@color/colorAccent"
            android:textColorLink="@color/colorAccent" />

        <TextView
            android:id="@+id/textAlreadySignedUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:text="@string/already_signed_up"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBackgroundLight"
            android:text="@string/sign_up" />

    </LinearLayout>

</FrameLayout>