<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/frame">

        <TextView
            android:id="@+id/titleDialogDeleteAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:elevation="5dp"
            android:padding="10dp"
            android:text="@string/title_delete_account"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDialogDeleteAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_delete_account"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDialogDeleteAccount" />

        <EditText
            android:id="@+id/editDialogPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorBackgroundDark"
            android:ems="10"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:textColor="@color/colorBackgroundDark"
            android:textColorHint="@color/colorBackgroundLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDialogDeleteAccount" />

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cancel"
            android:textColor="@color/colorBackgroundDark"
            app:layout_constraintEnd_toStartOf="@+id/buttonDelete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDialogPassword"
            app:strokeColor="@color/colorBackgroundDark" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/colorBackgroundLight"
            android:text="@string/delete"
            android:textColor="@color/text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toBottomOf="@+id/editDialogPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>